corregido se rompio el css se reparo yu agregomedia queris

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/css.css">
+  
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' />
+    <title>Título de la página</title>
+    <link rel="stylesheet" href="assets/css/css.css">
+
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="favicon/olla.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -12,20 +18,20 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="animate__animated animate__flip title-header"> BARBER SHOP</h1>
+        <h1 class="animate__animated animate__flip title-header"> BARBER <span>SHOP</span> </h1>
     </header>
-    <nav class="menu-nav">
-        <ul class="menu-ul">
-            <li class="menu-li"><a href="index.html">Inicio</a></li>
-            <li class="menu-li"><a href="producto.htm">Productos</a></li>
-            <li class="menu-li"><a href="sucursales.html">Sucursales</a></li>
-            <li class="menu-li"><a href="registrese.html">Registro</a></li>
+    <nav class="nav">
+        <ul class="nav-ul">
+            <li ><a href="index.html">Inicio</a></li>
+            <li ><a href="producto.htm">Productos</a></li>
+            <li ><a href="sucursales.html">Sucursales</a></li>
+            <li ><a href="registrese.html">Registro</a></li>
         </ul>
 
     </nav>
     <main  class="container">
     
-        <section class="section">
+        <section class="section contenedor-principal">
             <h2 class="indiose-title">Inicio</h2>
             <article class="bienvenido">
                 <h2 class="bienvenido-card"> "¡Bienvenido a nuestra barbería!"  </h2>
@@ -33,6 +39,11 @@
                 </p>
             </article>
         </section>
+        <br>
+        <div class="contenedor">
+            <h2>No te lo podes perder</h2>
+            <img class="imginicio" src="https://lh5.googleusercontent.com/proxy/ujmnptWF9i3KRF3qTby0ON7LeafU783bGC_3OoLYVQeyEDK0i6PMnVBEdbFlrzgPOz2LzOtgCuB2v-8-RidHggX3vqh1MqA2RNBJHUB0qMxtEvHrSyZI8iBbsIAwvubkdzh3wxKFKTt_sbUCVNqUljcoE-Q" alt="">
+        </div>
 
 
     </main>
