--- a/sucursales.html
+++ b/sucursales.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' />
+    <title>Título de la página</title>
     <link rel="stylesheet" href="/assets//css/css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="favicon/olla.ico" type="image/x-icon">
@@ -15,12 +17,12 @@
     <header class="header">
         <h1 class="animate__animated animate__flip title-header"> BARBER SHOP</h1>
     </header>
-    <nav class="menu-nav">
-        <ul class="menu-ul">
-            <li class="menu-li"><a href="index.html">Inicio</a></li>
-            <li class="menu-li"><a href="producto.htm">Productos</a></li>
-            <li class="menu-li"><a href="sucursales.html">Sucursales</a></li>
-            <li class="menu-li"><a href="registrese.html">Registro</a></li>
+    <nav class="nav">
+        <ul class="nav-ul">
+            <li ><a href="index.html">Inicio</a></li>
+            <li ><a href="producto.htm">Productos</a></li>
+            <li ><a href="sucursales.html">Sucursales</a></li>
+            <li ><a href="registrese.html">Registro</a></li>
         </ul>
 
     </nav>
